--- a/relatedPosts/Frontend/src/index.css
+++ b/relatedPosts/Frontend/src/index.css
@@ -79,14 +79,88 @@ input {
 }
 
 button {
-  padding: 15px;
   background-color: #007bff;
   color: #fff;
-  border: none;
-  border-radius: 4px;
   cursor: pointer;
+  padding: 8px;
+  border: 1px;
+  border-radius: 5px;
+  margin-right: 8px;
 }
 
 button:hover {
   background-color: #0056b3;
+}
+
+h2 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.text-container {
+  height: 40vh; 
+  margin: 30px;
+  margin-left: 10px;
+  margin-right: 50px;
+  padding: 20px;
+  border: 2px solid var(--titleColor);
+  border-radius: 28px; 
+  background-color: #3b4c6a; 
+  transition: background-size 0.3s;
+  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.7);
+  overflow-y: auto; 
+}
+
+.text-item {
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.search-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.input-group {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 5px;
+}
+
+.input-group select,
+.input-group input[type="text"]{
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.input-group select {
+  width: 80px; /* Adjust width as needed */
+}
+
+.input-group input[type="text"] {
+  flex: 1;
+}
+
+.input-group button:hover {
+  background-color: #0056b3;
+}
+
+ul.similar-searches {
+  list-style-type: none;
+  padding: 0;
+}
+
+ul.similar-searches li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px; /* Adjust as needed */
+}
+
+ul.similar-searches li button {
+  margin-left: 10px; /* Adjust as needed */
 }
