--- a/relatedPosts/Frontend/src/index.css
+++ b/relatedPosts/Frontend/src/index.css
@@ -54,8 +54,8 @@ body {
 .content {
   height: 80vh; 
   margin: 70px;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 10px;
+  margin-right: 10px;
   padding: 20px;
   border: 5px solid var(--titleColor);
   border-radius: 28px; 
@@ -163,4 +163,23 @@ ul.similar-searches li {
 
 ul.similar-searches li button {
   margin-left: 10px; /* Adjust as needed */
+}
+
+.svg-data-container {
+  display: flex; /* Use flexbox layout */
+}
+
+.svg-container {
+  flex: 1;
+}
+
+.data-container {
+  width: 300px; /* Set a fixed width for the data container */
+  margin-left: 20px; /* Add some spacing between the SVG and the data container */
+  padding: 10px;
+  border: 2px solid var(--titleColor);
+  border-radius: 8px; 
+  background-color: #3b4c6a; 
+  transition: background-size 0.3s;
+  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.7);
 }
