--- a/relatedPosts/Frontend/src/index.css
+++ b/relatedPosts/Frontend/src/index.css
@@ -1,86 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 :root {
-  --backgroundColor:hsl(220, 25%, 41%);
-  --titleColor:     rgb(129, 216, 202);
-  --textColor:      #f2f2f2;
-  --hoverColor:     rgb(223, 196, 44);
+  --white:  rgb(255, 255, 255);
+  --black:  rgb(0, 0, 0);
+  --grey:   rgb(241, 241, 241);
+  --shadow:   rgb(100, 100, 100)
 }
-body {
-  background: linear-gradient(0deg, #6cbacb, #1e1939);}
-/* base styles */
 * {
-  margin: 0;
   font-family: "Quicksand";
-  color: var(--textColor);
+  color: var(--black);
 }
-
-.navbar {
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  /* max-width: 600px; */
-  margin: 0;
-  border: 3px solid var(--titleColor);
-  padding: 10px; 
-  border-radius: 18px; 
-  text-align: center; 
-  background-color: #3b4c6a;
-  transition: background-size 0.3s; 
-  position: fixed;
-  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.7);
-}
-.navbar h1 {
-  margin-left: 10px;
-  color: var(--titleColor);
-}
-.navbar .links {
-  margin-left: auto;
-  margin-right: 40px;
-}
-.navbar a {
-  margin-left: 16px;
-  text-decoration: none;
-  padding: 6px;
-  border: 1.5px solid var(--titleColor);
-  border-radius: 10px;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.7);
-}
-.navbar a:hover {
-  color: var(--hoverColor);
+h2 {
+  padding: 10px
 }
 .content {
-  height: 80vh; 
-  margin: 70px;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 20px;
-  border: 5px solid var(--titleColor);
-  border-radius: 28px; 
-  background-color: #3b4c6a; 
-  transition: background-size 0.3s;
-  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.7);
-  overflow-y: auto; 
+  margin-top: 20vh;
+  margin-left: 22vw;
+  margin-right: 5vw;
+  height: 70vh;
+  padding: 5px;
+  border: 1px;
+  border-radius: 10px; 
+  box-shadow: 0px 0px 10px 0px var(--shadow);
+  overflow-y: auto;
 }
 
 select {
-  color: #0056b3; 
+  color: var(--black); 
 }
 input {
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 15px;
   flex-grow: 1;
-  border: 1px solid #ccc;
+  border: 1px solid var(--black);
   border-radius: 4px;
-  color: var(--backgroundColor)
+  color: var(--black)
 }
 
 button {
-  background-color: #007bff;
-  color: #fff;
+  background-color: var(--black);
+  color: var(--white);
   cursor: pointer;
   padding: 8px;
   border: 1px;
@@ -88,66 +47,8 @@ button {
   margin-right: 8px;
 }
 
-button:hover {
-  background-color: #0056b3;
-}
-
-h2 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.text-container {
-  height: 40vh; 
-  margin: 30px;
-  margin-left: 10px;
-  margin-right: 50px;
-  padding: 20px;
-  border: 2px solid var(--titleColor);
-  border-radius: 28px; 
-  background-color: #3b4c6a; 
-  transition: background-size 0.3s;
-  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.7);
-  overflow-y: auto; 
-}
-
-.text-item {
-  margin-bottom: 10px;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.search-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-}
-
-.input-group {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-bottom: 5px;
-}
-
-.input-group select,
-.input-group input[type="text"]{
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.input-group select {
-  width: 80px; /* Adjust width as needed */
-}
-
-.input-group input[type="text"] {
-  flex: 1;
-}
-
-.input-group button:hover {
-  background-color: #0056b3;
+button :hover {
+  background-color: var(--shadow);
 }
 
 ul.similar-searches {
@@ -167,19 +68,24 @@ ul.similar-searches li button {
 
 .svg-data-container {
   display: flex; /* Use flexbox layout */
+  border: 2px solid var(--shadow);
+  border-radius: 8px; 
 }
 
 .svg-container {
   flex: 1;
 }
-
+.svg {
+  border: 2px solid var(--shadow);
+  border-radius: 8px; 
+}
 .data-container {
   width: 300px; /* Set a fixed width for the data container */
   margin-left: 20px; /* Add some spacing between the SVG and the data container */
   padding: 10px;
-  border: 2px solid var(--titleColor);
+  border: 2px solid var(--shadow);
   border-radius: 8px; 
-  background-color: #3b4c6a; 
+  background-color: var(--black); 
   transition: background-size 0.3s;
   box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.7);
 }
