--- a/relatedPosts/Frontend/src/components/KeywordSearch.css
+++ b/relatedPosts/Frontend/src/components/KeywordSearch.css
@@ -2,10 +2,8 @@
 .text-container {
   height: 40vh; 
   margin: 30px;
-  margin-left: 10px;
-  margin-right: 50px;
   padding: 20px;
-  border: 2px solid var(--shadow);
+  border: 1.5px solid var(--shadow);
   border-radius: 28px; 
   background-color: var(--white); 
   overflow-y: auto; 
@@ -14,39 +12,20 @@
 .text-item {
   margin-bottom: 10px;
   padding: 8px;
-  border: 1px solid var(--shadow);
-  border-radius: 5px;
+  border: .5px;
+  border-radius: 4px;
+  box-shadow: 0px 5px 10px 0px var(--shadow);
 }
 
-.search-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
+.similar-searches {
+  list-style-type: none;
 }
 
-
-.input-group {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-bottom: 5px;
+.similar-searches li {
+  font-size: 16px;
 }
 
-.input-group select,
-.input-group input[type="text"]{
-  padding: 8px;
-  border: 1px solid var(--shadow);
-  border-radius: 5px;
-}
-
-.input-group select {
-  width: 80px; /* Adjust width as needed */
-}
-
-.input-group input[type="text"] {
-  flex: 1;
-}
-
-.input-group button:hover {
-  background-color: var(--shadow);
+.similar-searches li button {
+  margin-left: 10px;
+  margin-right: 10px; 
 }
