--- a/relatedPosts/Frontend/src/index.css
+++ b/relatedPosts/Frontend/src/index.css
@@ -3,7 +3,8 @@
   --white:  rgb(255, 255, 255);
   --black:  rgb(0, 0, 0);
   --grey:   rgb(241, 241, 241);
-  --shadow:   rgb(100, 100, 100)
+  --bggrey: rgb(250, 250, 250);
+  --shadow: rgb(180, 180, 180);
 }
 * {
   font-family: "Quicksand";
@@ -13,7 +14,7 @@ h2 {
   padding: 10px
 }
 .content {
-  margin-top: 20vh;
+  margin-top: 25vh;
   margin-left: 22vw;
   margin-right: 5vw;
   height: 70vh;
@@ -22,70 +23,69 @@ h2 {
   border-radius: 10px; 
   box-shadow: 0px 0px 10px 0px var(--shadow);
   overflow-y: auto;
+  background-color: var(--bggrey);
+}
+
+.search-container {
+  display: flex;
+  top: 20vh;
+  right: 41.5vw;
+  transform: translate(45%, -50%);
+  position: fixed;
+}
+
+.input-group {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 5px;
+}
+
+.input-group select,
+.input-group input[type="text"]{
+  padding: 8px;
+  border: 1px solid var(--shadow);
+  border-radius: 5px;
+}
+
+.input-group select {
+  width: 80px; /* Adjust width as needed */
 }
 
 select {
-  color: var(--black); 
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 8px;
+  flex-grow: 1;
+  border: .5px;
+  border-radius: 4px;
+  box-shadow: 0px 5px 10px 0px var(--shadow);
+  font-size: 16px;
 }
+
 input {
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 15px;
+  padding: 8px;
   flex-grow: 1;
-  border: 1px solid var(--black);
+  border: .5px;
   border-radius: 4px;
-  color: var(--black)
+  box-shadow: 0px 5px 10px 0px var(--shadow);
+  font-size: 16px;
 }
 
 button {
+  margin-top: 10px;
+  margin-bottom: 10px;
   background-color: var(--black);
   color: var(--white);
   cursor: pointer;
   padding: 8px;
-  border: 1px;
-  border-radius: 5px;
-  margin-right: 8px;
+  border: .5px;
+  border-radius: 4px;
+  font-size: 16px;
 }
 
-button :hover {
+button:hover {
   background-color: var(--shadow);
-}
-
-ul.similar-searches {
-  list-style-type: none;
-  padding: 0;
-}
-
-ul.similar-searches li {
-  display: flex;
-  align-items: center;
-  margin-bottom: 5px; /* Adjust as needed */
-}
-
-ul.similar-searches li button {
-  margin-left: 10px; /* Adjust as needed */
-}
-
-.svg-data-container {
-  display: flex; /* Use flexbox layout */
-  border: 2px solid var(--shadow);
-  border-radius: 8px; 
-}
-
-.svg-container {
-  flex: 1;
-}
-.svg {
-  border: 2px solid var(--shadow);
-  border-radius: 8px; 
-}
-.data-container {
-  width: 300px; /* Set a fixed width for the data container */
-  margin-left: 20px; /* Add some spacing between the SVG and the data container */
-  padding: 10px;
-  border: 2px solid var(--shadow);
-  border-radius: 8px; 
-  background-color: var(--black); 
-  transition: background-size 0.3s;
-  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.7);
 }
