adjust Sankey layout, delete unnecessary files

--- a/relatedPosts/Frontend/src/components/Sankey.css
+++ b/relatedPosts/Frontend/src/components/Sankey.css
@@ -1,22 +1,23 @@
 .svg-data-container {
+  margin-left: 20px; 
   border: 1.5px solid var(--shadow);
-  border-radius: 28px; 
+  border-radius: 8px; 
   background-color: var(--white); 
   width: 40vw;
-  height: 60vh;
-  align-items: center;
+  height: 50vh;
+  padding: 30px;
+  overflow-y: auto;
+  position: fixed;
 }
-
-.svg {
-  flex: 1;
-}
-
 
 .data-container {
-  width: 300px; /* Set a fixed width for the data container */
-  margin-left: 20px; /* Add some spacing between the SVG and the data container */
-  padding: 10px;
-  border: .5px;
-  border-radius: 4px;
-  box-shadow: 0px 5px 10px 0px var(--shadow);
+  margin-left: 47vw; 
+  width: 20vw;
+  height: 50vh;
+  padding: 20px;
+  border: 1.5px solid var(--shadow);
+  border-radius: 8px; 
+  background-color: var(--white); 
+  overflow-y: auto;
+  position: fixed;
 }
